--- a/index.html
+++ b/index.html
@@ -5,18 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <a class="link" href="#menu">show the menu</a>
-    <section class="menu-container">
-        <section class="menu">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium consequatur dolorem, minima, ipsa dolorum nostrum in sed unde incidunt laborum odio ullam earum voluptates labore porro ipsam corrupti sint eos.</p>
-            <input type="text">
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odit assumenda maiores voluptates.</p>
-            <button class="back">back</button>
-
-        </section>
+    <section class="menu-container" >
+      <section class="menu" aria-hidden="true" role="dialog" >
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium
+          consequatur dolorem, minima, ipsa dolorum nostrum in sed unde incidunt
+          laborum odio ullam earum voluptates labore porro ipsam corrupti sint
+          eos.
+        </p>
+        <input type="text" />
+        <input type="text" />
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odit
+          assumenda maiores voluptates.
+        </p>
+        <button class="back">back</button>
+      </section>
     </section>
 
     <script src="app.js"></script>
